--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
   <h2 class="title">Kritik & Saran</h2>
   <p class="subtitle">Kami menghargai masukan Anda untuk peningkatan layanan kami.</p>
 
-  <form id="feedbackForm">
+  <!-- Form submit tradisional ke Apps Script -->
+  <form id="feedbackForm" action="https://script.google.com/macros/s/AKfycbyFPZOz2hZl45FjLHr8nLe8rePGeZse4iiXpB8C-rCErL644oMW64l2MZxMli1WMJYp4w/exec" method="POST" target="hidden_iframe">
+
     <label>Nama Anda (optional)</label>
-    <input type="text" id="nama" placeholder="Tulis nama Anda...">
+    <input type="text" name="nama" placeholder="Tulis nama Anda...">
 
     <label>Nomor Table</label>
-    <select id="tableNo" required>
+    <select name="tableNo" required>
       <option value="" disabled selected>Pilih Nomor Table</option>
       <option>ST1</option><option>ST2</option><option>S3</option><option>S7</option>
       <option>S8</option><option>S9</option><option>S12</option><option>S5</option>
@@ -36,7 +38,7 @@
     </select>
 
     <label>Kategori Komplain</label>
-    <select id="kategori" required>
+    <select name="kategori" required>
       <option value="" disabled selected>Pilih kategori</option>
       <option>Makanan & Minuman</option>
       <option>Layanan</option>
@@ -53,29 +55,24 @@
       <span data-value="4">★</span>
       <span data-value="5">★</span>
     </div>
-    <input type="hidden" id="rating" required>
+    <input type="hidden" name="rating" id="rating" required>
 
     <label>Kritik & Saran Anda</label>
-    <textarea id="message" placeholder="Tulis masukan Anda..." required></textarea>
+    <textarea name="message" placeholder="Tulis masukan Anda..." required></textarea>
 
-    <button type="submit" id="submitBtn">
-      <span class="btn-text">Kirim Feedback</span>
-      <div class="loader"></div>
-    </button>
+    <button type="submit">Kirim Feedback</button>
   </form>
+
+  <!-- iframe tersembunyi untuk submit form -->
+  <iframe name="hidden_iframe" style="display:none;" onload="redirectSuccess()"></iframe>
 
   <div class="mode-toggle" id="toggleMode">☾</div>
 </div>
 
 <script>
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyFPZOz2hZl45FjLHr8nLe8rePGeZse4iiXpB8C-rCErL644oMW64l2MZxMli1WMJYp4w/exec"; // Ganti dengan URL Web App terbaru
-
-const form = document.getElementById("feedbackForm");
-const submitBtn = document.getElementById("submitBtn");
+// Rating stars
 const ratingStars = document.querySelectorAll("#ratingStars span");
 const ratingInput = document.getElementById("rating");
-
-// Rating stars
 ratingStars.forEach(star => {
   star.addEventListener("click", () => {
     const val = parseInt(star.dataset.value);
@@ -85,47 +82,19 @@ ratingStars.forEach(star => {
   });
 });
 
-// Submit form
-form.addEventListener("submit", async (e) => {
-  e.preventDefault();
-  if (!ratingInput.value) { alert("Pilih rating!"); return; }
-
-  submitBtn.classList.add("loading"); submitBtn.disabled = true;
-
-  const data = {
-    nama: document.getElementById("nama").value,
-    tableNo: document.getElementById("tableNo").value,
-    kategori: document.getElementById("kategori").value,
-    rating: ratingInput.value,
-    message: document.getElementById("message").value
-  };
-
-  try {
-    const response = await fetch(SCRIPT_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(data)
-    });
-    const result = await response.json();
-
-    if (result.status === "success") {
-      window.location.href = "success.html";
-    } else {
-      alert("Terjadi kesalahan: " + (result.message || "unknown error"));
-      submitBtn.classList.remove("loading"); submitBtn.disabled = false;
-    }
-  } catch(err) {
-    console.error(err);
-    alert("Gagal mengirim feedback. Silakan coba lagi.");
-    submitBtn.classList.remove("loading"); submitBtn.disabled = false;
+// Redirect ke success.html setelah submit
+function redirectSuccess() {
+  const iframe = document.querySelector('iframe[name="hidden_iframe"]');
+  if (iframe.contentDocument && iframe.contentDocument.body.innerHTML.length > 0) {
+    window.location.href = "success.html";
   }
-});
+}
 
 // Dark mode toggle
 document.getElementById("toggleMode").addEventListener("click", () => {
   document.body.classList.toggle("dark");
 });
 </script>
+
 </body>
 </html>
-
