--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
+<!-- Favicon / Logo di Tab Browser -->
+<link rel="icon" type="image/png" href="logo.png" />
 </head>
 <body>
 
@@ -32,7 +34,6 @@
         <label>Nomor Table</label>
         <select id="tableNo" required>
             <option value="" disabled selected>Pilih Nomor Table</option>
-
             <option>ST1</option><option>ST2</option><option>S3</option><option>S7</option>
             <option>S8</option><option>S9</option><option>S12</option><option>S5</option>
             <option>S6</option><option>S2</option><option>S11</option><option>S13</option>
@@ -45,7 +46,6 @@
             <option>AZURE</option><option>AQUILA</option><option>SIRIUS</option><option>SELENE</option>
             <option>HERA</option><option>HEMERA</option><option>DRACO</option><option>LUCIUS</option>
             <option>PENTHOUSE</option>
-
         </select>
 
         <!-- Kategori Komplain Dropdown -->
@@ -161,6 +161,3 @@ document.getElementById("toggleMode").addEventListener("click", () => {
 
 </body>
 </html>
-
-
-
