--- a/success.html
+++ b/success.html
@@ -1,32 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Success</title>
-<link rel="stylesheet" href="style.css">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Submission Success</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f0f8ff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+    }
 
+    .container {
+      background: white;
+      padding: 40px 60px;
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+      animation: fadeIn 0.8s ease-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .checkmark {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      display: block;
+      stroke-width: 6;
+      stroke: #22c55e;
+      stroke-miterlimit: 10;
+      margin: 0 auto 24px;
+      box-shadow: inset 0px 0px 0px #22c55e;
+      animation: fillCircle 0.8s ease-in-out forwards;
+    }
+
+    .checkmark circle {
+      stroke-dasharray: 314;
+      stroke-dashoffset: 314;
+      animation: drawCircle 0.8s ease-in-out 0.2s forwards;
+    }
+
+    .checkmark path {
+      stroke-dasharray: 50;
+      stroke-dashoffset: 50;
+      animation: drawCheck 0.5s ease-in-out 1s forwards;
+    }
+
+    @keyframes drawCircle {
+      to { stroke-dashoffset: 0; }
+    }
+
+    @keyframes drawCheck {
+      to { stroke-dashoffset: 0; }
+    }
+
+    @keyframes fillCircle {
+      to { box-shadow: inset 0px 0px 0px 60px #22c55e; }
+    }
+
+    h1 {
+      font-size: 1.7rem;
+      color: #333;
+      margin-bottom: 12px;
+    }
+
+    p {
+      color: #555;
+      margin-bottom: 20px;
+    }
+
+    .btn {
+      text-decoration: none;
+      padding: 12px 24px;
+      background: #22c55e;
+      color: white;
+      font-weight: bold;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background: #1eab4d;
+    }
+  </style>
+</head>
 <body>
 
-<div class="container" style="text-align:center; padding:40px;">
-    <h2 class="title">Terima Kasih!</h2>
-    <p style="margin-bottom:20px;">
-        Feedback Anda telah berhasil dikirim.
-    </p>
+  <div class="container">
+    <!-- SVG animasi ceklis -->
+    <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+      <circle cx="26" cy="26" r="24" fill="none"></circle>
+      <path fill="none" d="M16 26l8 8 12-12"></path>
+    </svg>
 
-    <img src="https://cdn-icons-png.flaticon.com/512/190/190411.png" width="100" style="filter: drop-shadow(0 0 6px #e6c17b);" />
+    <h1>Terima Kasih!</h1>
+    <p>Feedback Anda sudah berhasil dikirim.</p>
 
-    <p style="margin-top:20px;">Mengalihkan kembali dalam <span id="timer">5</span> detik...</p>
-</div>
-
-<script>
-let c = 5;
-setInterval(() => {
-    c--;
-    document.getElementById("timer").innerText = c;
-    if (c === 0) window.location.href = "index.html";
-}, 1000);
-</script>
+    <a href="/" class="btn">Kembali ke Beranda</a>
+  </div>
 
 </body>
 </html>
